@@ -13,13 +13,15 @@ echo "${info} *** Create an executable version of the com.greetings module *** $
 if [[ "$OSTYPE" == "cygwin" ]] || [[ "$OSTYPE" == "msys" ]] ; then
     # Windows users: please not that if the below fails due to JAVA_HOME substitution, please hard-code the JAVA_HOME path into the script
     jlink --module-path "${JAVA_HOME}\jmods;mlib" \
-          --add-modules com.greetings \
-          --output executable
+          [add the module(s) that you want included in the final executable] \
+          [specify the folder where the distributable should be created]
 else
     jlink --module-path "${JAVA_HOME}"/jmods:mlib \
-          --add-modules com.greetings \
-          --output executable
+          [add the module(s) that you want included in the final executable] \
+          [specify the folder where the distributable should be created]
 fi
+
+# Check out documentation on jlink to survive at this stage
 
 echo ""
 echo "${info} *** Displaying the contents (modules) of the 'executable' folder *** ${normal}"
